updated beamer theme and color

--- a/doc/botany2015talk.tex
+++ b/doc/botany2015talk.tex
@@ -1,20 +1,26 @@
 \documentclass[t,presentation,10pt,xcolor=table]{beamer}
-\usetheme{Madrid}
-\usecolortheme{crane}
+\usetheme{Berkeley}
+\usecolortheme{whale}
 \usefonttheme[onlymath]{serif}
 \usepackage{xfrac}
 \usepackage{adjustbox}
 \title[Allele frequencies in polyploids]{Estimating allele frequencies in non-model polyploids using high throughput sequencing data}
-\author[Botany 2015]{Paul Blischak, Laura Kubatko, Andrea Wolfe}
-\institute[The Ohio State University]
-{
-Dept. of EEOB \\
+\author[Botany 2015]{Paul Blischak$^1$, Laura Kubatko$^{1,2}$, Andrea Wolfe$^1$}
+\institute[Edmonton]
+{\bfseries
+$^1$Dept. of EEOB \\
+$^2$Dept. of Statistics \\
 The Ohio State University
 }
 \date{\today}
 
 \begin{document}
 \frame{\titlepage}
+
+\begin{frame}
+\frametitle{Outline}
+\tableofcontents
+\end{frame}
 
 \section{Tests for introgression}
 \subsection{Patterson's D-statistic}
