changed theme to antibes; tested adding figures

--- a/botany2015talk.tex
+++ b/botany2015talk.tex
@@ -1,6 +1,6 @@
 \documentclass[t,presentation,10pt,xcolor=table]{beamer}
-\usetheme{Berkeley}
-\usecolortheme{whale}
+\usetheme{Antibes}
+\usecolortheme{lily}
 \usefonttheme[onlymath]{serif}
 \usepackage{xfrac}
 \usepackage{adjustbox}
@@ -15,6 +15,7 @@ The Ohio State University
 \date{\today}
 
 \begin{document}
+
 \frame{\titlepage}
 
 \begin{frame}
@@ -28,6 +29,12 @@ The Ohio State University
 \begin{frame}
 \frametitle{Early empiricists}
 
+\end{frame}
+
+\begin{frame}[plain]{}
+	\begin{center}
+		\includegraphics[width=\textwidth]{figs/test}
+	\end{center}
 \end{frame}
 
 \subsection{Early theory}
