changed theme to Frankfurt; overall layout complete

--- a/botany2015talk.tex
+++ b/botany2015talk.tex
@@ -1,6 +1,6 @@
-\documentclass[t,presentation,10pt,xcolor=table]{beamer}
-\usetheme{Antibes}
-\usecolortheme{lily}
+\documentclass[t,presentation,10pt]{beamer}
+\usetheme{Frankfurt}
+\usecolortheme{default}
 \usefonttheme[onlymath]{serif}
 \usepackage{xfrac}
 \usepackage{adjustbox}
@@ -31,12 +31,6 @@ The Ohio State University
 
 \end{frame}
 
-\begin{frame}[plain]{}
-	\begin{center}
-		\includegraphics[width=\textwidth]{figs/test}
-	\end{center}
-\end{frame}
-
 \subsection{Early theory}
 
 \begin{frame}
@@ -51,7 +45,44 @@ The Ohio State University
 
 %
 
-\section{Population genetics models}
+\section{Polyploid pop-gen}
 
+\subsection{Challenges}
+
+\subsection{Allelic Dosage Uncertainty}
+
+\begin{frame}[c]{A hierarchical model for poylploids}
+	\begin{center}
+		\includegraphics[width=0.6\textwidth]{fig/figure1-model-graph}
+	\end{center}
+\end{frame}
+
+\subsection{Overcoming ADU}
+
+\section{Simulations}
+
+\begin{frame}[c,plain]{}
+	\begin{center}
+		\includegraphics[width=0.9\textwidth]{fig/hex-plot0-05}
+	\end{center}
+\end{frame}
+
+\begin{frame}[c,plain]{}
+	\begin{center}
+		\includegraphics[width=0.7\textwidth]{fig/figure2-tetra-heatmaps}
+	\end{center}
+\end{frame}
+
+\begin{frame}[c,plain]{}
+	\begin{center}
+		\includegraphics[width=0.7\textwidth]{fig/figure3-hex-heatmaps}
+	\end{center}
+\end{frame}
+
+\begin{frame}[c]{}
+	\begin{center}
+		\includegraphics[width=\textwidth]{fig/figure4-coverage-sd}
+	\end{center}
+\end{frame}
 
 \end{document}
