barbara10 added; first draft done

--- a/botany2015talk.tex
+++ b/botany2015talk.tex
@@ -58,6 +58,19 @@
 	\end{center}
 \end{frame}
 
+\begin{frame}[c]{And of course...}
+\framesubtitle{Barbara McClintock}
+
+Work on polyploid \textit{Zea}.
+
+	\begin{center}
+		\includegraphics[width=\textwidth]{fig/barbara10}
+	\end{center}
+	
+	\hfill {\small \#Barbara10}
+
+\end{frame}
+
 %%%%
 \section{Polyploid pop-gen}
 %%%%
@@ -201,11 +214,13 @@
 \begin{frame}[t]{Conclusions}
 	\fontsize{10pt}{10}\selectfont
 	\begin{itemize}
-		\item \textsc{Take home}: \textbf{Don't have to use genotypes as the first line of data}. Using sequencing reads and integrating over genotypes is a viable solution for dealing with ADU.
+		\item \textsc{Take home}: \textbf{Don't have to use genotypes as the first line of data}. Using sequencing reads is a viable solution for dealing with ADU.
 		\vspace{0.2in}
 	
-		\item Item 2
+		\item \textbf{The framework presented here is highly extensible}. Future work includes generalizing to auto- and allopolyploids, more complex patterns of inheritance, species tree inference for polyploids based on allele frequencies(?).
 		\vspace{0.2in}
+		
+		\item \textbf{Need empirical data}. Simulations are nice, but we need to see how a model such as this works for lab-collected data.
 		
 	\end{itemize}
 	
@@ -229,6 +244,9 @@
 	
 		\item Presentation slides will be on fig\textbf{share} shortly, and \LaTeX{} source code will also be on GitHub -- \url{https://github.com/pblischak/botany2015}.
 	\end{itemize}
+	\vspace{0.1in}
+	
+	{\Large All these links are in the GitHub repository for this presentation: \textbf{pblischak/botany2015}.}
 \end{frame}
 
 \begin{frame}[t,plain]{Acknowledgments}
