last minute changes; link to figshare doi

--- a/botany2015talk.tex
+++ b/botany2015talk.tex
@@ -105,7 +105,7 @@ Work on polyploid \textit{Zea}.
 	\vspace{0.1in}
 	
 	\begin{itemize}
-		\item \textbf{Partial heterozygote} -- when the number of observed alleles at a locus is less than the ploidy level and not equal to 1.
+		\item \textbf{Partial heterozygote} -- when the number of observed alleles at a locus is less than the ploidy level and not equal to 1 (i.e., is homozygous).
 		\vspace{0.1in}
 
 		\item \textbf{Ex}: For a locus with observed alleles A, B and C in a tetraploid (4X), the possible genotypes are AABC, ABBC or ABCC.
@@ -233,10 +233,10 @@ Work on polyploid \textit{Zea}.
 		\item \textsc{Take home}: \textbf{Don't have to use genotypes as the first line of data}. Using sequencing reads is a viable solution for dealing with ADU.
 		\vspace{0.2in}
 	
-		\item \textbf{The framework presented here is highly extensible}. Future work includes generalizing to auto- and allopolyploids, more complex patterns of inheritance, species tree inference for polyploids based on allele frequencies(?).
+		\item \textbf{The framework presented here is highly extensible}. Future work includes generalizing to both auto- and allopolyploids, more complex patterns of inheritance.
 		\vspace{0.2in}
 		
-		\item \textbf{Sampling more individuals appears to be most important}. It's better to sample more individuals than to have higher sequencing coverage per individual per locus.
+		\item \textbf{Sampling more individuals appears to be most important}. More individuals over higher sequencing coverage.
 		\vspace{0.2in}
 		
 		\item \textbf{Need empirical data}. Simulations are nice, but we need to see how a model such as this works for lab-collected data.
