fixed typo in wit-h

--- a/botany2015talk.tex
+++ b/botany2015talk.tex
@@ -140,7 +140,7 @@ Work on polyploid \textit{Zea}.
 \end{frame}
 
 \begin{frame}[t]{Overcoming ADU}
-	For a biallelic locus, such as a SNP, we can use techniques like RAD sequencing to ``sample" from the genotype (model wit binomial probability distribution*).
+	For a biallelic locus, such as a SNP, we can use techniques like RAD sequencing to ``sample" from the genotype (model with binomial probability distribution*).
 	\vspace{0.2in}
 	
 	\begin{center}
